crates/dust-ast/src/tests/snapshots/dust_ast__tests__arithmetic__assert_neg_5_gte_neg_5_neq_true.snap
---
source: crates/dust-ast/src/tests/arithmetic.rs
expression: parsed
---
{
  "Literal": {
    "lit": {
      "Bool": false
    },
    "span": {
      "offset": 0,
      "length": 23
    }
  }
}
