crates/dust-ast/src/tests/snapshots/dust_ast__tests__arithmetic__assert_neg_5_lt_4.snap
---
source: crates/dust-ast/src/tests/arithmetic.rs
expression: parsed
---
{
  "Literal": {
    "lit": {
      "Bool": true
    },
    "span": {
      "offset": 0,
      "length": 13
    }
  }
}
