crates/dust-ast/src/tests/snapshots/dust_ast__tests__arithmetic__assert_neg_7_plus_35.snap
---
source: crates/dust-ast/src/tests/arithmetic.rs
expression: parsed
---
{
  "Literal": {
    "lit": {
      "Number": 28.0
    },
    "span": {
      "offset": 0,
      "length": 10
    }
  }
}
