crates/dust-ast/src/tests/snapshots/dust_ast__tests__arithmetic__assert_true_or_true.snap
---
source: crates/dust-ast/src/tests/arithmetic.rs
expression: parsed
---
{
  "Literal": {
    "lit": {
      "Bool": true
    },
    "span": {
      "offset": 0,
      "length": 12
    }
  }
}
