crates/dust-ast/src/tests/snapshots/dust_ast__tests__arithmetic__assert_zero_over_zero.snap
---
source: crates/dust-ast/src/tests/arithmetic.rs
expression: parsed
---
{
  "Literal": {
    "lit": {
      "Number": null
    },
    "span": {
      "offset": 1,
      "length": 5
    }
  }
}
