crates/dust-ast/src/tests/snapshots/dust_ast__tests__arithmetic__assert_zero_over_zero_eq_zero_over_zero.snap
---
source: crates/dust-ast/src/tests/arithmetic.rs
expression: parsed
---
{
  "Literal": {
    "lit": {
      "Bool": false
    },
    "span": {
      "offset": 1,
      "length": 16
    }
  }
}
